refactor 결제 수정 #29 - 결제 생성할 때 좌석 결제 내역 안생기던 오류 수정 - 결제 생성 시 결제 테이블에 총가격 들어가도록 수정